add jvm arg to prevent unamed access error message